fix logo size on mobile

--- a/src/modules/mainMenu/mainMenu.css
+++ b/src/modules/mainMenu/mainMenu.css
@@ -2,6 +2,10 @@
 mainMenu module
 *******************************************************************************/
 
+:root {
+    --s-mainMenu-logo-column-width: calc(var(--s-leadingDouble) * 2);
+}
+
 [i-mainMenu] {
     display: grid;
     box-shadow: var(--global-sh);
@@ -12,14 +16,14 @@ mainMenu module
 @media (--smaller) {
     [i-mainMenu] {
         width: 100%;
-        grid-template-columns: auto calc(var(--s-leadingDouble) * 2);
+        grid-template-columns: auto var(--s-mainMenu-logo-column-width);
     }
 }
 
 @media (--mediumAndBigger) {
     [i-mainMenu] {
         float: right;
-        grid-template-columns: max-content calc(var(--s-leadingDouble) * 2);
+        grid-template-columns: max-content var(--s-mainMenu-logo-column-width);
     }
 }
 
@@ -50,17 +54,19 @@ mainMenu items
     grid-column: 1 / span 2;
 }
 
+[i-mainMenu-item~="selected"],
+[i-mainMenu-itemLabel~="selected"] {
+    font-weight: 700;
+}
+
+/* logo takes two columns and is a square <3 */
 [i-mainMenu-item~="logo"] {
     grid-row: 1 / span 2;
     grid-column: 2;
 }
 
 [i-mainMenu-item~="logo"] svg {
-    width: 100%;
-    height: 100%;
-}
-
-[i-mainMenu-item~="selected"],
-[i-mainMenu-itemLabel~="selected"] {
-    font-weight: 700;
+    /* svg needs to take container padding into account */
+    width: calc(var(--s-mainMenu-logo-column-width) - 2 * var(--s-leadingHalf));
+    height: calc(var(--s-mainMenu-logo-column-width) - 2 * var(--s-leadingHalf));
 }
